updated login page design

--- a/login.css
+++ b/login.css
@@ -7,8 +7,8 @@
 }
 
 :root{
-    --global-background-color: #7EA0B7;
-    --global-shawdow-color: #A9CEF4;
+    --global-background-color: #FFF;
+    --global-shawdow-color: #03045E;
     --link-background-color: #FF5A5F ;
     --global-text-color: #03045E;
     --text-hover-color: #000000;
