--- a/style100.css
+++ b/style100.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,11 +7,11 @@
 }
 
 :root{
-    --global-background-color: #FFF;
+    --global-background-color: #000000;
     --global-shawdow-color: #03045E;
     --link-background-color: #FF5A5F ;
     --global-text-color: #03045E;
-    --text-hover-color:#000000;
+    --text-hover-color:white;
 }
 
 html{
@@ -20,7 +20,7 @@ html{
 }
 
 a{
-    font-family: 'Caprasimo', cursive;
+    font-family: 'Orbitron', sans-serif;
     font-weight: bold;
     font-size: 24px;
     text-decoration: none;
@@ -33,14 +33,19 @@ a:hover{
 }
 
 input{
-    width: 70%;
-    margin: 10px auto;
-    padding: 5px;
-    border:none;
+    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
+    color: var(--global-text-color);
+    font-size: 25px;
+    border-radius: 5px;
+    width: 100%;
+    margin: 13px auto;
+    padding: 12px;
+    border: solid 0.5px #9ecaed;
+    box-shadow: 0 0 7px white;
 }
-
 input:focus{
-    border: solid 1px var(--link-background-color);
+    box-shadow: 0 0 10px white;
 }
 
 header{
@@ -81,4 +86,52 @@ footer{
     padding: 20px;
     width: 100%;
     box-shadow: 0 10px 15px -3px var();
+}
+.modals-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+
+.modal{
+    border-radius: 5px;
+    background-color:var(--global-text-color);
+    min-width: 60%;
+    min-height: 60%;
+    padding: 20px;
+}
+
+#login-modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#close-modal{
+    border-radius: 5px;
+    color:white;
+    background-color: var(--global-text-color);
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    cursor: pointer;
+    padding: 15px;
+}
+
+h2{
+    margin-right: 300px;
+    margin-bottom: 30px;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
+    font-size: 50px; 
+}
+
+.image{
+    margin-top: 200px;
+    margin-left: 50px;  
 }
